--- a/appsrc/AppFVC/AppFVC/Views/SmsPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/SmsPage.xaml
@@ -10,8 +10,8 @@
 
     <ScrollView>
         <StackLayout>
-            <Frame CornerRadius="5" VerticalOptions="Start" Margin="40,55,40,10">
-                <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" RowSpacing="5" Padding="5,10,5,10">
+            <Frame CornerRadius="5" VerticalOptions="Start" Margin="40,65,40,10">
+                <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" RowSpacing="5" Padding="1,0,1,10">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -25,8 +25,8 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Row="0" Grid.Column="0" Text="Código SMS" Style="{StaticResource BoldFont}" VerticalOptions="Start" FontSize="Medium" FontAttributes="Bold" TextColor="#303030" HorizontalOptions="CenterAndExpand"></Label>
-                    <Label Grid.Row="1" Grid.Column="0" Text="{Binding LabelTelefone}" HorizontalTextAlignment="Center"></Label>
+                    <Label Grid.Row="0" Grid.Column="0" Text="Código SMS" Style="{StaticResource BoldFont}" VerticalOptions="Start" FontSize="20" FontAttributes="Bold" TextColor="#303030" HorizontalOptions="CenterAndExpand"></Label>
+                    <Label Grid.Row="1" Grid.Column="0" Text="{Binding LabelTelefone}" Margin="4,0,4,0" HorizontalTextAlignment="Center"></Label>
                     <Frame Grid.Row="2" Grid.Column="0" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28" HorizontalOptions="FillAndExpand" Margin="0,10,0,0">
                         <customRenders:CustomEntry Placeholder="Digite aqui o cógio enviado" Keyboard="Numeric" Margin="10,0,0,0" MaxLength="6" HeightRequest="38" FontSize="13" Text="{Binding Codigo}" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
                             <Entry.Behaviors>
@@ -36,7 +36,7 @@
                     </Frame>
                     <Label Grid.Row="3" Grid.Column="0" IsVisible="{Binding VisibleErro}" Text="{Binding Erro}" HorizontalTextAlignment="Center" TextColor="#EB5757" FontSize="11" VerticalOptions="Start" HorizontalOptions="CenterAndExpand"></Label>
                     <Label Grid.Row="4" Grid.Column="0" Text="Reenviar código" Style="{StaticResource BoldFont}" TextColor="#6FCF97" FontAttributes="Bold" HorizontalOptions="CenterAndExpand"></Label>
-                    <Button Grid.Row="5" Grid.Column="0" Margin="0,20,0,0" CornerRadius="25" TextColor="White" Text="Próximo" Command="{Binding NavegarNext}" BackgroundColor="#219653" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
+                    <Button Grid.Row="5" Grid.Column="0" Margin="0,20,0,0" CornerRadius="25" TextColor="White" Text="Próximo" Command="{Binding NavegarNext}" HeightRequest="40" FontSize="14" BackgroundColor="#219653" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
                     <Label Grid.Row="6" Grid.Column="0" Text="Voltar" TextColor="#828282" HorizontalOptions="CenterAndExpand"></Label>
                 </Grid>
             </Frame>
