--- a/appsrc/AppFVC/AppFVC/Views/WelcomePage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/WelcomePage.xaml
@@ -7,21 +7,51 @@
              BackgroundColor="#6FCF97">
 
     <ScrollView>
-        <StackLayout>
+        
+
             <Frame CornerRadius="5" VerticalOptions="StartAndExpand" HasShadow="True" Margin="40,65,40,30">
-                <StackLayout Padding="7,5,7,10" Spacing="10">
-                    <Label Text="Cuida Maneh!" FontSize="20" Style="{StaticResource BoldFont}" TextColor="#303030"/>
-                    <Label TextColor="#737373" Text="Aqui em Floripa, a vida vem em primeiro lugar." FontSize="16"/>
-                    <Label TextColor="#737373" FontSize="16" Text="Nesse APP, vamos monitorar sua localização para identificar se você pode ter sido infectado. Se você teve contato com alguém que testou positivo, não se preocupe, vamos te avisar! E aí é só seguir as recomendações do aplicativo."/>
-                    <Label TextColor="#737373" FontSize="16" Text="Queremos proteger você e todos os que você ama."/>
-                    <Label TextColor="#737373" FontSize="16" Text="Vem com a gente combater o Corona!" Style="{StaticResource BoldFont}"/>
-                    <Button Margin="0,30,0,0" Style="{StaticResource ButtonNextStyle}" Command="{Binding NavegarNext}" Text="Criar conta" WidthRequest="100" HeightRequest="40" FontSize="14" HorizontalOptions="CenterAndExpand"></Button>
-                </StackLayout>
-                <Frame.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding GeoLocationCommand}" NumberOfTapsRequired="5"/>
-                </Frame.GestureRecognizers>
-            </Frame>
-        </StackLayout>
+            <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" RowSpacing="5" Padding="1,0,1,10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+
+
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+
+                </Grid.ColumnDefinitions>
+               
+                <Label Grid.Row="0" Text="Cuida Maneh!" FontSize="20" Style="{StaticResource BoldFont}" TextColor="#303030"/>
+                 <Label Grid.Row="1" TextColor="#737373" Text="Aqui em Floripa, a vida vem em primeiro lugar." FontSize="16"/>
+                <Label  Grid.Row="2" TextColor="#737373" FontSize="16" Text="Nesse APP, vamos monitorar sua localização para identificar se você pode ter sido infectado. Se você teve contato com alguém que testou positivo, não se preocupe, vamos te avisar! E aí é só seguir as recomendações do aplicativo."/>
+                <Label  Grid.Row="3" TextColor="#737373" FontSize="16" Text="Queremos proteger você e todos os que você ama."/>
+                <Label  Grid.Row="4" TextColor="#737373" FontSize="16" Text="Vem com a gente combater o Corona!" Style="{StaticResource BoldFont}"/>
+                <Button  Grid.Row="5" Margin="0,30,0,0" Style="{StaticResource ButtonNextStyle}" Command="{Binding NavegarNext}" Text="Criar conta" WidthRequest="100" HeightRequest="40" FontSize="14" HorizontalOptions="CenterAndExpand"></Button>
+                <ActivityIndicator
+                           IsVisible="{Binding IsBusy}"
+                           IsRunning="{Binding IsBusy}"
+                           Color="Red" 
+                    Grid.Row="6"
+                    HorizontalOptions="Center"
+                    BackgroundColor="Transparent"                
+                   />
+               
+            </Grid>
+                
+            <Frame.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding GeoLocationCommand}" NumberOfTapsRequired="5"/>
+            </Frame.GestureRecognizers>
+                
+        </Frame>
+       
+         
+            
+      
     </ScrollView>
 
 
