--- a/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
@@ -35,6 +35,9 @@
                            IsRunning="{Binding IsBusy}"
                            Color="Red" 
                     Grid.Row="11"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
+                        
                     HorizontalOptions="Center"
                     BackgroundColor="Transparent"                
                    />
