--- a/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
@@ -24,6 +24,7 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
 
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
@@ -99,6 +100,7 @@
                             </TapGestureRecognizer>
                         </BoxView.GestureRecognizers>
                     </BoxView>
+                    
                     <Label Grid.Row="8" Grid.Column="1" x:Name="lbTerms" Margin="0,10,0,0" Text="Li e aceito os termos de uso." FontSize="12" TextColor="#A3A3A3" TextDecorations="Underline" VerticalOptions="StartAndExpand" >
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer
@@ -109,8 +111,12 @@
                             </TapGestureRecognizer>
                         </Label.GestureRecognizers>
                     </Label>
-                    <Label Grid.Row="9" Grid.ColumnSpan="2" Margin="5,0,5,0" Text="{Binding Erro}" TextColor="#EB5757" IsVisible="{Binding IVErro}" FontSize="11"></Label>
-                    <Button Grid.Row="10" Grid.ColumnSpan="2" Margin="0,5,0,0" Command="{Binding NavegarNext}"   Style="{StaticResource ButtonNextStyle}" Text="Próximo" HeightRequest="40" FontSize="14" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
+                    <CheckBox Grid.Row="9" Grid.Column="0" IsChecked="{Binding CheckPref}" Color="#009789" Margin="5,5,0,0" VerticalOptions="EndAndExpand" HorizontalOptions="StartAndExpand" ></CheckBox>
+
+
+                    <Label Grid.Row="9" Grid.Column="1" x:Name="lbPref" Margin="0,10,0,0" Text="Quero receber notificações da prefeitura" FontSize="12" TextColor="#A3A3A3" TextDecorations="Underline" VerticalOptions="StartAndExpand" ></Label>
+                    <Label Grid.Row="10" Grid.ColumnSpan="2" Margin="5,0,5,0" Text="{Binding Erro}" TextColor="#EB5757" IsVisible="{Binding IVErro}" FontSize="11"></Label>
+                    <Button Grid.Row="11" Grid.ColumnSpan="2" Margin="0,5,0,0" Command="{Binding NavegarNext}"   Style="{StaticResource ButtonNextStyle}" Text="Próximo" HeightRequest="40" FontSize="14" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
                 </Grid>
             </Frame>
         </StackLayout>
