--- a/appsrc/AppFVC/AppFVC/Views/AddressPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/AddressPage.xaml
@@ -3,10 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com" xmlns:customRenders="clr-namespace:AppFVC.CustomRenders" xmlns:local="clr-namespace:AppFVC.Behaviors"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="AppFVC.Views.AddressPage">
+             x:Class="AppFVC.Views.AddressPage"
+             BackgroundColor="#6FCF97">
     <ScrollView>
         <StackLayout>
-            <Frame CornerRadius="5" VerticalOptions="Start"  x:Name="GridRegister" Margin="40,65,40,30">
+            <Frame CornerRadius="5" VerticalOptions="Start"  Margin="40,65,40,30">
                 <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" RowSpacing="5" Padding="1,0,1,10">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -28,8 +29,8 @@
                     </Grid.ColumnDefinitions>
 
 
-                    <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Endereço" Style="{StaticResource BoldFont}" VerticalOptions="Start" FontSize="20" FontAttributes="Bold" TextColor="#303030" HorizontalOptions="Center"></Label>
-                    <Frame Grid.Row="1" Grid.Column="0" Padding="0" Margin="0,10,0,0" BackgroundColor="#F2F2F2" CornerRadius="28">
+                    <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Endereço" Style="{StaticResource BoldFont}"  VerticalOptions="Start" FontSize="20" FontAttributes="Bold" TextColor="#303030" HorizontalOptions="Center"></Label>
+                    <Frame Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Padding="0" Margin="0,10,0,0" BackgroundColor="#F2F2F2" CornerRadius="28">
                         <customRenders:CustomEntry Placeholder="CEP" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
                             <Entry.Behaviors>
                                 <local:NomeBehavior />
@@ -94,7 +95,7 @@
 
 
                     <Label Grid.Row="9" Grid.ColumnSpan="2" Margin="5,0,5,0" TextColor="#EB5757" FontSize="11"></Label>
-                    <Button Grid.Row="10" Grid.ColumnSpan="2" Margin="0,5,0,0"  Style="{StaticResource ButtonNextStyle}" Text="Próximo" HeightRequest="40" FontSize="14" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
+                    <Button Grid.Row="10" Grid.ColumnSpan="2" Margin="0,5,0,0"  Style="{StaticResource ButtonNextStyle}" Command="{Binding NavegarNext}" Text="Próximo" HeightRequest="40" FontSize="14" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
                 </Grid>
             </Frame>
         </StackLayout>
