--- a/appsrc/AppFVC/AppFVC/Views/AddressPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/AddressPage.xaml
@@ -17,85 +17,58 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
+
 
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
 
-                    <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Endereço" Style="{StaticResource BoldFont}"  VerticalOptions="Start" FontSize="20" FontAttributes="Bold" TextColor="#303030" HorizontalOptions="Center"></Label>
-                    <Frame Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Padding="0" Margin="0,10,0,0" BackgroundColor="#F2F2F2" CornerRadius="28">
+                    <Label Grid.Row="0" Grid.ColumnSpan="4" Text="Endereço" Style="{StaticResource BoldFont}"  VerticalOptions="Start" FontSize="20" FontAttributes="Bold" TextColor="#303030" HorizontalOptions="Center"></Label>
+                    <Frame Grid.Row="1" Grid.ColumnSpan="3" Padding="0" Margin="0,10,0,0" BackgroundColor="#F2F2F2" CornerRadius="28">
                         <customRenders:CustomEntry Placeholder="CEP" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
-                            <Entry.Behaviors>
-                                <local:NomeBehavior />
-                            </Entry.Behaviors>
                         </customRenders:CustomEntry>
                     </Frame>
-                    <Label Grid.Row="2" Grid.Column="0" Margin="10,0,0,0" TextColor="#EB5757" FontSize="11"></Label>
-                    
-                    <Frame Grid.Row="3" Grid.Column="1" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
+                    <Image Grid.Row="1" Grid.Column="3" Source="iconLupa50px.png" HeightRequest="10"/>
+
+                    <Frame Grid.Row="3" Grid.ColumnSpan="3" Padding="0" HorizontalOptions="FillAndExpand" BackgroundColor="#F2F2F2" CornerRadius="28">
                         <customRenders:CustomEntry Placeholder="Rua" MaxLength="15" Keyboard="Telephone" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
-                            <Entry.Behaviors>
-                                <local:PhoneNumberFormatterBehavior />
-                            </Entry.Behaviors>
                         </customRenders:CustomEntry>
                     </Frame>
-                    <Label Grid.Row="4" Grid.Column="1" Margin="10,0,0,0" TextColor="#EB5757" FontSize="11"></Label>
 
-                    <Frame Grid.Row="3" Grid.Column="0" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
-                        <customRenders:CustomEntry Placeholder="N°" Keyboard="Numeric" MaxLength="3" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
-                            <Entry.Behaviors>
-                                <local:IdadeBehavior />
-                            </Entry.Behaviors>
+                    <Frame Grid.Row="3" Grid.Column="3" Padding="0" HorizontalOptions="Start" BackgroundColor="#F2F2F2" CornerRadius="28">
+                        <customRenders:CustomEntry Placeholder="N°" Keyboard="Numeric" MaxLength="3" Margin="10,0,10,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
                         </customRenders:CustomEntry>
                     </Frame>
-                    <Label Grid.Row="4" Grid.Column="0" Margin="10,0,0,0" TextColor="#EB5757" FontSize="11"></Label>
-                    
-                    <Frame Grid.Row="5" Grid.Column="1" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
-                        <customRenders:CustomEntry Placeholder="Complemento" Keyboard="Numeric" MaxLength="3" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
-                            <Entry.Behaviors>
-                                <local:IdadeBehavior />
-                            </Entry.Behaviors>
-                        </customRenders:CustomEntry>
-                    </Frame>
-                    <Label Grid.Row="6" Grid.Column="1" Margin="10,0,0,0" TextColor="#EB5757" FontSize="11"></Label>
-                    
-                    <Frame Grid.Row="5" Grid.Column="0" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
-                        <customRenders:CustomEntry Placeholder="Bairro" Keyboard="Numeric" MaxLength="3" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
-                            <Entry.Behaviors>
-                                <local:IdadeBehavior />
-                            </Entry.Behaviors>
-                        </customRenders:CustomEntry>
-                    </Frame>
-                    <Label Grid.Row="6" Grid.Column="0" Margin="10,0,0,0" TextColor="#EB5757" FontSize="11"></Label>
 
-                    <Frame Grid.Row="7" Grid.Column="1" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
-                        <customRenders:CustomEntry Placeholder="Cidade" Keyboard="Numeric" MaxLength="3" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
-                            <Entry.Behaviors>
-                                <local:IdadeBehavior />
-                            </Entry.Behaviors>
+                    <Frame Grid.Row="4" Grid.ColumnSpan="2" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
+                        <customRenders:CustomEntry Placeholder="Bairro" MaxLength="15" Keyboard="Telephone" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
                         </customRenders:CustomEntry>
                     </Frame>
-                    <Label Grid.Row="8" Grid.Column="1" Margin="10,0,0,0" TextColor="#EB5757" FontSize="11"></Label>
 
-                    <Frame Grid.Row="7" Grid.Column="0" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
-                        <customRenders:CustomEntry Placeholder="Estado" Keyboard="Numeric" MaxLength="3" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
-                            <Entry.Behaviors>
-                                <local:IdadeBehavior />
-                            </Entry.Behaviors>
+                    <Frame Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
+                        <customRenders:CustomEntry Placeholder="Complemento" Keyboard="Numeric" MaxLength="3" Margin="10,0,10,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
                         </customRenders:CustomEntry>
                     </Frame>
-                    <Label Grid.Row="8" Grid.ColumnSpan="0" Margin="10,0,0,0" TextColor="#EB5757" FontSize="11"></Label>
+
+                    <Frame Grid.Row="5" Grid.ColumnSpan="2" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
+                        <customRenders:CustomEntry Placeholder="Cidade" MaxLength="15" Keyboard="Telephone" Margin="10,0,0,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
+                        </customRenders:CustomEntry>
+                    </Frame>
+
+                    <Frame Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="2" Padding="0" BackgroundColor="#F2F2F2" CornerRadius="28">
+                        <customRenders:CustomEntry Placeholder="Estado" Keyboard="Numeric" MaxLength="3" Margin="10,0,10,0" HeightRequest="38" FontSize="14" BackgroundColor="#F2F2F2" PlaceholderColor="#BDBDBD">
+                        </customRenders:CustomEntry>
+                    </Frame>
 
 
-                    <Label Grid.Row="9" Grid.ColumnSpan="2" Margin="5,0,5,0" TextColor="#EB5757" FontSize="11"></Label>
-                    <Button Grid.Row="10" Grid.ColumnSpan="2" Margin="0,5,0,0"  Style="{StaticResource ButtonNextStyle}" Command="{Binding NavegarNext}" Text="Próximo" HeightRequest="40" FontSize="14" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
+
+                    <Label Grid.Row="6" Grid.ColumnSpan="4" Margin="5,0,5,0" TextColor="#EB5757" FontSize="11"></Label>
+                    <Button Grid.Row="7" Grid.ColumnSpan="4" Margin="0,5,0,0"  Style="{StaticResource ButtonNextStyle}" Command="{Binding NavegarNext}" Text="Próximo" HeightRequest="40" FontSize="14" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
                 </Grid>
             </Frame>
         </StackLayout>
