--- a/appsrc/AppFVC/AppFVC/Views/RegisterInfoPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterInfoPage.xaml
@@ -7,8 +7,8 @@
              BackgroundColor="#6FCF97">
     <ScrollView>
         <StackLayout>
-            <Frame CornerRadius="5" VerticalOptions="Start" Margin="40,65,40,30" Padding="0">
-                <StackLayout VerticalOptions="Start" Padding="0,0,13,60" BackgroundColor="White">
+            <Frame CornerRadius="5" VerticalOptions="Start" Margin="40,65,40,60" Padding="0">
+                <StackLayout VerticalOptions="Start" Padding="0,0,13,20" BackgroundColor="White">
                     <ImageButton Source="iconExit50px.png" BackgroundColor="Transparent" Command="{Binding NavigationPop}" HeightRequest="30" HorizontalOptions="Start" Margin="0"></ImageButton>
                     <Label Text="Por que preciso informar  meus dados?" FontSize="20" VerticalOptions="Start" Padding="25,0,0,0" TextColor="#303030"></Label>
                     <Label Padding="25,10,30,0" TextColor="#737373" FontSize="16" Text="Precisamos de algumas informações básicas para informar como você deve proceder, no caso de contaminação. "></Label>
@@ -22,6 +22,7 @@
                             </FormattedString>
                         </Label.FormattedText>
                     </Label>
+                    <Image Source="Frame" HorizontalOptions="Center" Margin="0,20,0,0"></Image>
                 </StackLayout>
             </Frame>
         </StackLayout>
