--- a/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
@@ -8,8 +8,9 @@
              x:Class="AppFVC.Views.RegisterPage"
              BackgroundColor="#6FCF97">
 
-    <ScrollView>
-        <StackLayout>
+   
+        <StackLayout Padding="0,0,0,10">
+        
             <Frame CornerRadius="5" VerticalOptions="Start"  x:Name="GridRegister" Margin="40,65,40,30">
                 <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" RowSpacing="5" Padding="1,0,1,10">
                     <Grid.RowDefinitions>
@@ -118,9 +119,13 @@
                     <Label Grid.Row="9" Grid.Column="1" x:Name="lbPref" Margin="0,10,0,0" Text="Quero receber notificações da prefeitura" FontSize="12" TextColor="#A3A3A3" TextDecorations="Underline" VerticalOptions="StartAndExpand" ></Label>
                     <Label Grid.Row="10" Grid.ColumnSpan="2" Margin="5,0,5,0" Text="{Binding Erro}" TextColor="#EB5757" IsVisible="{Binding IVErro}" FontSize="11"></Label>
                     <Button Grid.Row="11" Grid.ColumnSpan="2" Margin="0,5,0,0" Command="{Binding NavegarNext}"   Style="{StaticResource ButtonNextStyle}" Text="Próximo" HeightRequest="40" FontSize="14" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
+               
                 </Grid>
+                
             </Frame>
+            <Image Source="Group.png" VerticalOptions="EndAndExpand" HorizontalOptions="Center"></Image>
         </StackLayout>
-    </ScrollView>
+        
+ 
 
 </ContentPage>
